<resources>
    <string name="app_name">Sensor Monitor</string>
    <string name="dailysurvey_message_title">Daily Survey</string>
    <string name="dailysurvey_message">
        As part of your participation in the UCB Sensor Inference Study, we would like to give you a short survey
        that will take 1-2 minutes of your time. \n\n

        Though every daily survey is optional, these surveys greatly benefit our research and maximize your participation
        in our study. You can manually check for daily survey eligibility by opening our app anytime and pressing the
        status button. \n
        Would you like to complete today\'s survey now?
    </string>
    <string name="dailysurvey_yes">Yes!</string>
    <string name="dailysurvey_no">Not today.</string>
    <string name="dailysurvey_postpone">Remind me in an hour.</string>
    <string name="dailypost_done">Done</string>
    <string name="dailypost_info">Info Page</string>
    <string name="dailypost_title">Today\'s Survey Complete!</string>
    <string name="dailypost_messsage">
        You have submitted today\'s survey!
        \nYou will be prompted for a survey on each day for the remainder of the study.
        \nThese surveys <b>greatly</b> benefit our research, so you are highly encouraged to participate in
        each survey!
        \n\nThank you, again, for your participation in the UC Berkeley Sensor Inference study.

    </string>
    <string name="deadline_message_title">UCB Sensor Research Almost Complete!</string>
    <string name="deadline_message">
        To complete your participation in our research study, please complete this brief,
        mandatory exit survey.
        \nAfter taking the survey, you will be directed to uninstall the app.

        \n\n<b>Please note: You will not qualify for full, complete participation in this study
        without completion of this exit survey!</b>
    </string>
    <string name="deadline_proceed_button">Proceed!</string>
    <string name="deadline_postpone_button">Remind me in an hour.</string>
    <string name="deadline_uninstall_button">Uninstall now.</string>
    <string name="deadline_confirm_title">Are you sure?</string>
    <string name="deadline_confirm_message">
        If you do not complete the very brief exit survey, you will not be considered for
        complete participation in the study.

        \n\nAre you sure you want to skip the exit survey?

    </string>
    <string name="deadline_confirm_yes">Yes</string>
    <string name="deadline_confirm_no">No</string>
    <string name="uninstall_message_title">UCB Sensor Research Complete!</string>
    <string name="uninstall_message">
        Thank you for participating in our research project! \n\n
        One week has passed since you installed our app, so you are officially done with your participation.
        You can now proceed to uninstall the app.
    </string>
    <string name="uninstall_proceed_button">Proceed to Uninstall</string>
    <string name="consent_title">Consent to Participate in Research\n Understanding Smartphone Sensors</string>
    <string name="consent_message">
        \n<b>In order for you to understand your participation in this study, please read this entire
        disclosure:</b>

        \n\n<u>Introduction</u>
        \nThis app is part of a study conducted at UC Berkeley and the International Computer Science
        Institute (ICSI), led by Dr. Serge Egelman, to explore the possibility of inferring user information
        from benign smartphone sensors, like the step counter or compass. You must be 18 years of
        age or older and own an Android phone running a recent version of Android.

        \n\n<u>Procedures</u>
        \nThis app will silently collect periodic sensor measurements: device specifications, compass,
        accelerometer, gyroscope, battery state, screen state, proximity (distance an object is from the
        screen), barometric pressure, relative humidity, ambient temperature, pedometer counts, and
        luminosity (how bright the environment around the phone is). It will also collect GPS data. Data
        collection will have minimal impact on your phone performance and battery life. Your
        participation in this study will involve one required introductory survey, in addition to brief
        daily optional surveys. These surveys will ask you about your demographics and daily activities,
        so that we can see if they could have been predicted based on the captured sensor data. The
        first survey will appear after you agree to participate in this study. Additional daily surveys will
        appear as notifications from this application.

        \n\n<u>Total Time Commitment</u>
        \nTotal active time commitment will be under 15 minutes: approximately 5 minutes to complete
        the initial survey, 1 minute for each daily survey, 1 minute for the exit survey, and then a week
        of passively keeping our app running. We will ask you to complete 6 daily surveys, at most.

        \n\n<u>Benefits / Risks</u>
        \nThis research will not benefit you directly. However, it will indirectly benefit you and other
        smartphone users by informing system designers of the data implications from benign sensors.

        \n\nSome of the research questions may make you uncomfortable or upset. You are free to decline
        \nto answer and stop the study at any time. You may also uninstall the app at any time to stop
        the study.

        \n\nIf you find any survey content objectionable, you may choose to abstain from answering, or
        \neven end your participation in the study entirely.
        The risks for this study are minimal: these involve a potential breach of confidentiality for GPS
        data and other location data. We will encrypt data to decrease the probability of such a breach.

        \n\n<u>Confidentiality</u>
        \nAll collected data will be kept on our secure servers. The data will be maintained for possible
        future research. Only anonymous, non-identifiable data (i.e., not GPS) will be potentially shared
        with other researchers.

        \n\n<u>Rights</u>
        \nParticipation in research is completely voluntary. You have the right to decline to participate or
        to withdraw at any point in this study without penalty or loss of benefits to which you are
        otherwise entitled.

        \n\n<u>Contact Information</u>
        \nIf you have any questions or concerns about your rights and treatment as a research subject,
        you may contact the office of UC Berkeley\'s Committee for the Protection of Human Subjects,
        at 510-642- 7461 or subjects@berkeley.edu. Reference: CPHS# 2015-11- 8097

        \n\nIf you have any questions or concerns about this study, you may contact our team at:
        \nSensors Inference Project Team
        \n<a href = "mailto:sensor-inference@icsi.berkeley.edu">sensor-inference@icsi.berkeley.edu</a>
        \n<a href = "https://blues.cs.berkeley.edu/sensor-inference">https://blues.cs.berkeley.edu/sensor-inference</a>
        \nInternational Computer Science Institute
    </string>
    <string name="consent_agree">AGREE</string>
    <string name="consent_cancel">CANCEL</string>
    <string name="permissions_continue">CONTINUE</string>
    <string name="permissions_explanation_title">Required Permissions</string>
    <string name="permissions_explanation_1">
        The app will now prompt you for the following permissions:
    </string>
    <string name="permissions_explanation_4">
        - \"Access this device\'s location\"
    </string>
    <string name="permissions_explanation_5">
        We need this permission to collect periodic GPS data.
    </string>
    <string name="permissions_explanation_6">
        You will need to accept these permissions to complete your participation in this study.
    </string>
    <string name="permission_denied_title">Permissions Denied Warning</string>
    <string name="permission_denied_response">
        You chose to deny permissions that this app needs to collect data.\n
        Please recall that the app will not collect any personally identifiable information besides GPS. All data
        that is collected will be stored securely.\n\n

        <b>Please note: You will not be considered for participation in this study with completion of this portion
            of the study.</b>\n\n

        The app will now close. If this is a mistake, you may restart the app and accept the permissions.
    </string>
    <string name="permission_denied_ok">Ok</string>
    <string name="survey_redirect_message">
        You will now be directed to complete a short survey for some demographic information needed for this research.
        As always, your data will be kept securely and confidentially.
    </string>
    <string name="survey_redirect_warning">
        Please note: You will need to answer EVERY question in the survey in order to be considered for particpation
        in this study.
    </string>
    <string name="survey_redirect_title">Required Survey</string>
    <string name="survey_completion_keyword">processing</string>
    <string name="verif_title">Your Verification Code</string>
    <string name="verif_message_1">
        Thank you for your participation. Your verification code is displayed below.
    </string>
    <string name="verif_message_2">
        Please keep this code for your own reference.
    </string>
    <string name="verif_code">ToBeReplacedDynamically</string>
    <string name="info_main">This app is for a study at UC Berkeley to better understand smartphone sensors.
        This app will log various sensor data over the course of one week.
    </string>
    <string name="info_verif_code">Verification Code: </string>
    <string name="info_id">ID: </string>
    <string name="info_build">Build: </string>
    <string name="info_contact_label">Contact Info: </string>
    <string name="info_contact_details_1">
        Sensors Inference Project Team
    </string>
    <string name="info_contact_details_2">
        sensor-inference@icsi.berkeley.edu
    </string>
    <string name="info_contact_details_3">
        Computer Science Department, UC Berkeley
        International Computer Science Institute
    </string>
    <string name="info_done_button">Done!</string>
    <string name="info_dailystatus_button">Is today\'s survey available?</string>
    <string name="info_ok">Ok</string>
    <string name="info_unavailable_title">Survey Currently Unavailable</string>
    <string name="info_unavailable_message">
        You are not eligible to take today\'s survey at the moment. This may be because:

        \n\n1. You have already submitted today\'s survey. You must wait until 8PM tomorrow to submit another survey.
        \n2. You have postponed the survey. Wait an hour before trying again.
        \n3. It is not yet 8PM today.

        \n\nDaily surveys become available for four hours starting at 8PM every day, and can only be submitted once a day.

    </string>
    <string name="entry_survey_url">https://www.surveygizmo.com/s3/2933242/Sensors-Inference-Entry-Survey?uuid=</string>
    <string name="daily_survey_url">https://www.surveygizmo.com/s3/2934943/Sensors-Inference-Daily-Activity-Survey?uuid=</string>
    <string name="exit_survey_url">https://www.surveygizmo.com/s3/2950911/Sensors-Inference-Exit-Survey?uuid=</string>
    <string name="app_version">2ce1eb1</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="action_example">Example action</string>
    <string name="action_settings">Settings</string>
    <string name="title_activity_settings">Settings</string>
    <string name="pref_header_general">General</string>
    <string name="pref_title_social_recommendations">Enable social recommendations</string>
</resources>